View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024486 | Open CASCADE | OCCT:DRAW | public | 2013-12-20 10:35 | 2021-09-03 13:40 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | won't fix | ||
Platform | A | OS | L | ||
Product Version | 6.6.0 | ||||
Target Version | 7.6.0 | ||||
Summary | 0024486: Draw Harness - cerr and cout streams are not interleaved in log | ||||
Description | if (doLog) { capture_end (aFile_err, STDERR_FILENO, fd_err_save, err_name, di.Log(), doEcho); capture_end (aFile_out, STDOUT_FILENO, fd_out_save, out_name, di.Log(), doEcho); } CommandCmd() creates independent file descriptors for error and output streams. This does not make sense since results are moved to the single destination anyway, but causes interleaved output to be dumped as independent chunks. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR24486 has been updated forcibly by mkv. SHA-1: 1133670796bd9065a590567fd42ba28c69c843fe |
|
0001-0024486-Draw-Harness-cerr-and-cout-streams-are-not-i.patch (2,917 bytes) |
|
Branch CR24486 has been deleted by kgv. SHA-1: 1133670796bd9065a590567fd42ba28c69c843fe |
|
Please close the bug. |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-12-20 10:35 | kgv | New Issue | |
2013-12-20 10:35 | kgv | Assigned To | => abv |
2013-12-20 10:37 | kgv | Assigned To | abv => ibs |
2013-12-20 10:37 | kgv | Status | new => assigned |
2014-04-04 18:27 | abv | Target Version | 6.7.1 => 6.8.0 |
2014-09-01 21:20 | git | Note Added: 0031252 | |
2014-09-26 16:32 | abv | Target Version | 6.8.0 => 7.1.0 |
2016-11-01 06:41 | abv | Target Version | 7.1.0 => 7.2.0 |
2017-07-27 09:43 | abv | Target Version | 7.2.0 => 7.4.0 |
2017-11-01 20:20 |
|
Test case number | => Not needed |
2019-07-19 17:29 | apn | Assigned To | ibs => kgv |
2019-07-19 17:29 | apn | Target Version | 7.4.0 => 7.5.0 |
2020-08-28 15:20 | kgv | Target Version | 7.5.0 => 7.6.0 |
2021-08-24 01:36 | kgv | File Added: 0001-0024486-Draw-Harness-cerr-and-cout-streams-are-not-i.patch | |
2021-08-24 01:37 | git | Note Added: 0103402 | |
2021-08-24 01:37 | kgv | Note Added: 0103403 | |
2021-08-24 01:37 | kgv | Assigned To | kgv => bugmaster |
2021-08-24 01:37 | kgv | Status | assigned => feedback |
2021-08-24 01:37 | kgv | Resolution | open => won't fix |
2021-09-03 13:40 | bugmaster | Status | feedback => closed |