0024486: Draw Harness - cerr and cout streams are not interleaved in log

cout and cerr were merged